--- a/about.html
+++ b/about.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>duan4</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>dự án 4 rồi nhé bạn ơi</h1>
-    <h2>sửa lần 1</h2>
-    <h2>sửa lần 2</h2>
+    <h2>About</h2>
 </body>
 </html>
